Fixed images not showing up and adjusted modal sizes to different modals

--- a/app/assets/stylesheets/admin/newsletters.scss
+++ b/app/assets/stylesheets/admin/newsletters.scss
@@ -56,9 +56,14 @@ table.newsletters {
     }
   }
 }
-
+#administrate-section-images-modal .modal-dialog {
+  width: 65% !important;
+}
+#send_newsletter_modal .modal-dialog {
+  width: 65% !important;
+}
 .modal-dialog {
-  width: 60% !important;
+  width: 88% !important;
 }
 .modal-body{
   padding: 0;
